chore(build): Temporarily use JDK 23 with preview features to access JDK 24 features with stable gradle build